/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.phoenix.coprocessor.generated";
option java_outer_classname = "PFunctionProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message PFunctionArg {
  required string argumentType = 1;
  optional bool isArrayType = 2;
  optional bool isConstant = 3;
  optional string defaultValue = 4;
  optional string minValue = 5;
  optional string maxValue = 6;
}

message PFunction {
  required string functionName = 1;
  repeated PFunctionArg arguments = 2;
  required string classname = 3;
  required int64 timeStamp = 4;
  optional string jarPath = 5;
  optional bytes tenantId = 6;
  optional string returnType = 7;
  optional bool isArrayReturnType = 8;
  optional bool isReplace = 9;
}
